# latti-ai

./: .dockerignore  .gitignore  .gitmodules  .licenserc.yaml  .pre-commit-config.yaml  BOOTSTRAP_OPT_README.md  CMakeLists.txt  CONTRIBUTING.md  DELIVERABLES.md  Dockerfile  README.md  SECURITY.md  audit_report.md  generate_ppt.py  ruff.toml
.github/workflows/: ci.yml  format.yml  license.yml  python-lint.yml  static-analysis.yml
docs/en/: APIs_Reference.md  whitepaper.md
docs/zh/: whitepaper.md
examples/: CMakeLists.txt  README.md  inference.cpp
examples/test_cifar10/: CMakeLists.txt  gen_mega_ag.py  train.py
examples/test_cifar10/task/server/: ckks_parameter.json  task_config.json
examples/test_imagenet/: CMakeLists.txt  gen_mega_ag.py  train.py
examples/test_imagenet/task/client/: ckks_parameter.json
examples/test_imagenet/task/server/: ckks_parameter.json  task_config.json
examples/test_mnist/: CMakeLists.txt  gen_mega_ag.py  train.py
examples/test_mnist/task/client/: ckks_parameter.json
examples/test_mnist/task/server/: model_parameters.h5  task_config.json
examples/test_mnist/task/server/ergs/: erg0.json
inference/: .clang-format  CMakeLists.txt  README.md  common.h  util.cpp  util.h  viz_config.py
inference/data_structs/: constants.h  feature.cpp  feature.h  feature0d.cpp  feature0d.h  feature1d.cpp  feature1d.h  feature2d.cpp  feature2d.h  feature_mat.cpp  feature_mat.h  feature_tiny.cpp  feature_tiny.h
inference/fhe_layers/: CMakeLists.txt  activation_layer.cpp  activation_layer.h  add_layer.cpp  add_layer.h  avgpool2d_layer.cpp  avgpool2d_layer.h  block_col_major_ccmm.cpp  block_col_major_ccmm.h  block_col_major_cpmm.cpp  block_col_major_cpmm.h  block_col_major_transpose.cpp  block_col_major_transpose.h  block_cpmm.cpp  block_cpmm.h  concat_layer.cpp  concat_layer.h  conv1d_packed_layer.cpp  conv1d_packed_layer.h  conv2d_depthwise.cpp  conv2d_depthwise.h  (+36 more)
inference/unittests/: CMakeLists.txt  fixture.hpp  test_data_structs.cpp  test_e2e.cpp  test_fhe_layers_hetero.cpp  test_gen_layers.py  ut_util.cpp  ut_util.h
training/: README.md  ct_json_viz.py  requirements.txt  run_compile.py
(+92 files in other folders)
